fixed flickering hover css

--- a/app/styles/modules/_footer.scss
+++ b/app/styles/modules/_footer.scss
@@ -318,13 +318,22 @@ it doesnt work for me maybe we need to update to the latest version of foundatio
   li{
     width: 75px;
     height: 48px;
-    display: inline-block;
     position: relative;
-    margin: 0 auto;
-    text-align: center;
-      svg{
-        width: 24px;
-        fill: $color-grey-dark-80;
-      }
+    a{
+      border: 2px solid transparent;
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+    }
+    a:hover{
+      border-color: $color-grey-dark-80;
+    }
+    svg{
+      position: absolute;
+      top: 25%;
+      left: 16%;
+      width: 24px;
+      fill: $color-grey-dark-80;
+    }
   }
 }
